# SOLr-Pay

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
api/: index.js  package-lock.json  package.json
app/: craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/public/: index.html
app/src/: App.css  App.tsx  index.css  index.tsx
app/src/assets/: rocket.png:Zone.Identifier
app/src/components/: BaseButton.tsx  BottomNav.tsx  Button.tsx  Card.tsx  DisconnectButton.tsx  Form.tsx  Header.tsx  Input.tsx  Modal.tsx  Toast.tsx
app/src/interfaces/: idl.json  types.ts
app/src/pages/: Home.tsx  Profile.tsx  Settings.tsx  Signup.tsx
app/src/pages/Home/: Home.tsx
app/src/pages/Payment/: Payment.tsx
app/src/pages/Signup/: Signup.tsx
app/src/redux/app/: hooks.ts  store.ts
app/src/redux/features/: listings-slice.ts  user-slice.ts
app/src/utils/: edit-profile.ts  follow.ts  get-all-txns.ts  get-friends.ts  get-program.ts  get-provider.ts  get-txns.ts  get-user.ts  get-users.ts  get-wallet.ts  get-wallets.ts  initialize.ts  pay-sol.ts  pay-token.ts  pay.ts  unfollow.ts
programs/solr/: Cargo.toml
programs/solr/src/: instruction.rs  lib.rs
programs/solrpay/: Cargo.toml
programs/solrpay/src/: error.rs  lib.rs
programs/solrpay/src/instructions/: changename.rs  changepfp.rs  mod.rs  (+5 more)
programs/test/: Cargo.toml
programs/test/src/: instruction.rs  lib.rs  state.rs
reference/: instruction.rs
tests/: changename.ts  changepfp.ts  follow.ts  friends.ts  initialize.ts  pay.ts  paytoken.ts  solr.ts  test.ts
(+8 files in other folders)
