[package]
name = "test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
solana-program = "1.9.14"
borsh = "0.9.3"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.14"
solana-sdk = "=1.9.14"
solana-validator = "=1.9.14"
solana-logger = "=1.9.14"
solana-client = "=1.9.14"